RESOLVED FIXED150739
Begin work on supporting reply blocks in _WKRemoteObjectRegistry
https://bugs.webkit.org/show_bug.cgi?id=150739
Summary Begin work on supporting reply blocks in _WKRemoteObjectRegistry
Anders Carlsson
Reported 2015-10-30 16:15:42 PDT
Begin work on supporting reply blocks in _WKRemoteObjectRegistry
Attachments
Patch (16.62 KB, patch)
2015-10-30 16:18 PDT, Anders Carlsson
no flags
Patch (16.65 KB, patch)
2015-10-30 16:22 PDT, Anders Carlsson
no flags
Patch (15.90 KB, patch)
2015-11-02 15:37 PST, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2015-10-30 16:18:36 PDT
WebKit Commit Bot
Comment 2 2015-10-30 16:20:15 PDT
Attachment 264434 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistry.mm:63: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2015-10-30 16:22:15 PDT
WebKit Commit Bot
Comment 4 2015-10-30 16:25:29 PDT
Attachment 264435 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistry.mm:63: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 5 2015-10-30 16:31:07 PDT
Comment on attachment 264435 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=264435&action=review > Source/WebKit2/Shared/API/Cocoa/WKRemoteObjectCoder.mm:206 > + ?
Anders Carlsson
Comment 6 2015-10-30 17:13:16 PDT
Alexey Proskuryakov
Comment 7 2015-10-31 16:21:28 PDT
WebKit Commit Bot
Comment 8 2015-11-01 07:58:35 PST
Re-opened since this is blocked by bug 150774
Alexey Proskuryakov
Comment 9 2015-11-01 08:03:06 PST
Rolled out in r191857.
Anders Carlsson
Comment 10 2015-11-02 15:37:30 PST
WebKit Commit Bot
Comment 11 2015-11-02 15:39:45 PST
Attachment 264640 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistry.mm:63: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 12 2015-11-02 16:08:41 PST
Note You need to log in before you can comment on or make changes to this bug.