Tools/TestWebKitAPI/Tests/WebKit2Cocoa/RemoteObjectRegistryPlugIn.mm
@@ -62,6 +62,12 @@
     [jsContext setObject:helloString forKeyedSubscript:@"helloString"];
 }
 
+- (void)sayHello:(NSString *)hello completionHandler:(void (^)(NSString *))completionHandler
+{
+    // FIXME: Actually call this.
+    // completionHandler([NSString stringWithFormat:@"Your string was '%@'", hello]);
+}
+
 @end
 
 #endif // WK_API_ENABLED
